--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -71,26 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¿Por qué esta magnífica tecnología científica,\n",
-      "que ahora trabajo y nos hace la vida más fácil,\n",
-      "nos aporta tan poca felicidad?\n",
-      "La respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino\n",
+      "¿Por qué esta magnífica tecnología científica\n",
+      "\tque ahora trabajo y nos hace la vida más fácil,\n",
+      "\tnos aporta tan poca felicidad?\n",
+      "\tLa respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
       "Albert Einsten\n"
      ]
     }
    ],
    "source": [
-    "print(\"¿Por qué esta magnífica tecnología científica,\")\n",
-    "print(\"que ahora trabajo y nos hace la vida más fácil,\")\n",
-    "print(\"nos aporta tan poca felicidad?\")\n",
-    "print(\"La respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino\")\n",
+    "print(\"¿Por qué esta magnífica tecnología científica\\n\\tque ahora trabajo y nos hace la vida más fácil,\\n\\tnos aporta tan poca felicidad?\\n\\tLa respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\")\n",
     "print(\"Albert Einsten\")"
    ]
   },
@@ -187,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +204,7 @@
        "'\\nHemos escrito línea por línea \\nla dirección completa de nuestro domicilio\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,10 +225,10 @@
     "print(código_postal)\n",
     "# indicamos toda la dirección\n",
     "print(dirección_completa)\n",
-    "'''\n",
+    "\"\"\"\n",
     "Hemos escrito línea por línea \n",
     "la dirección completa de nuestro domicilio\n",
-    "'''"
+    "\"\"\""
    ]
   },
   {
@@ -269,10 +266,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 7) (2951493094.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    otra_var = \"Ejercicio\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Estan mal la 2 porque no tiene doble comilla al final, la 4 porque tiene espacio en vez de guión entre mi y variab1e y un uno en vez de l\n",
+    "la 6 porque no se puede importar un número, la 7 porque empieza por un número\n",
+    "\"\"\"\n",
+    "\n",
+    "mi_variable = \"Economía\"\n",
+    "otra_var = \"Ejercicio\n",
+    "True = \"Ejercicio\"\n",
+    "mi variab1e = \"Alpha\"\n",
+    "exec = True\n",
+    "import = 40\n",
+    "81mi_variable = \"Agua\"\n",
+    "mi_variable10 = 6\n"
+   ]
   },
   {
    "attachments": {
@@ -299,6 +319,138 @@
     "         \n",
     " </td></tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1368884001.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    porcentaje_der = 15%\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "victorias = 6\n",
+    "derrotas = 1\n",
+    "porcentaje_vict = 0.85\n",
+    "porcentaje_der = 15%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "victorias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derrotas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.85"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "porcentaje_vict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(victorias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(derrotas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(porcentaje_vict)"
    ]
   },
   {
