--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
@@ -62,7 +62,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_2 = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "for resultado in ejer_2:\n",
+    "    al_cuadrado = resultado ** 2\n",
+    "    \n",
+    "print(ejer_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "def encontrar_duplicados(lista, elemento):\n",
+    "    indices_duplicados = []\n",
+    "    for i in range(len(lista)):\n",
+    "        if lista[i] == elemento:\n",
+    "            indices_duplicados.append(i)\n",
+    "    return indices_duplicados  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "repeticiones = ejer_9.count(3)\n",
+    "nueva_tupla = ejer_9[4:10]\n",
+    "# La nueva tupla tiene 5 elementos"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +136,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numero_a_buscar = 60\n",
+    "\n",
+    "if numero_a_buscar in ejer_9:\n",
+    "    print(f\"El número {numero_a_buscar} está en la tupla ejer_9.\")\n",
+    "else:\n",
+    "    print(f\"El número {numero_a_buscar} no está en la tupla ejer_9.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,11 +300,24 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
